Added config.yml, which are accessible by project in all twig files

--- a/src/index.twig
+++ b/src/index.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+  <h1>{{ project.projectName }}</h1>
   <table class="pew_table">
     {% for page in pages %}
       <tr>
