--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ config.name }}{% endblock %}
 
 {% block content %}
-  <a class="pew_breadcrumb">Pingu / Components</a>
+  <a class="pew_breadcrumb">{{ project.projectName }} / Components</a>
   <h1 class="pew_title">{{ config.name }}</h1>
 
   <div class="pew_preview">
