--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -14,9 +14,9 @@
           <span class="pew_breadcrumb__text">{{projectName}}</span>
         </li>
         <li class="pew_breadcrumb__item">
-          <button href="#" class="pew_breadcrumb__trigger">
+          <button href="#" class="pew_breadcrumb__panel-trigger">
             <span class="pew_breadcrumb__text">Components</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" class="pew_breadcrumb__trigger-icon"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" class="pew_breadcrumb__panel-trigger-icon"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
           </button>
         </li>
       </ul>
