PNG-34 add twig code support

--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -83,7 +83,7 @@
         <div class="pew_tabs__panels">
           <article id="tab-panel_twig" class="pew_tabs__panel pew_tabs__panel--active" role="tabpanel" aria-labelledby="tab_twig">
             <h2 class="pew_tabs__panel-title">Twig</h2>
-            <pre class="pew_code"><code class="language-html">{{ code.twig }}</code></pre>
+            <pre class="pew_code"><code class="language-twig2">{{ code.twig }}</code></pre>
           </article>
           <article id="tab-panel_js" class="pew_tabs__panel" role="tabpanel" aria-labelledby="tab_js" aria-hidden="true">
             <h2 class="pew_tabs__panel-title">Javascript</h2>
