--- a/src/preview/assets/fonts/overpass/overpass.css
+++ b/src/preview/assets/fonts/overpass/overpass.css
@@ -1,31 +1,31 @@
 /* stylelint-disable */
 @font-face {
   font-family: overpass;
-  src: url('overpass-light.eot');
-  src: url('overpass-light.eot?#iefix') format('embedded-opentype'),
-       url('overpass-light.woff2') format('woff2'),
-       url('overpass-light.woff') format('woff'),
-       url('overpass-light.ttf')  format('truetype');
+  src: url('./overpass-light.eot');
+  src: url('./overpass-light.eot?#iefix') format('embedded-opentype'),
+       url('./overpass-light.woff2') format('woff2'),
+       url('./overpass-light.woff') format('woff'),
+       url('./overpass-light.ttf')  format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: overpass;
-  src: url('overpass-regular.eot');
-  src: url('overpass-regular.eot?#iefix') format('embedded-opentype'),
-       url('overpass-regular.woff2') format('woff2'),
-       url('overpass-regular.woff') format('woff'),
-       url('overpass-regular.ttf')  format('truetype');
+  src: url('./overpass-regular.eot');
+  src: url('./overpass-regular.eot?#iefix') format('embedded-opentype'),
+       url('./overpass-regular.woff2') format('woff2'),
+       url('./overpass-regular.woff') format('woff'),
+       url('./overpass-regular.ttf')  format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: overpass;
-  src: url('overpass-bold.eot');
-  src: url('overpass-bold.eot?#iefix') format('embedded-opentype'),
-       url('overpass-bold.woff2') format('woff2'),
-       url('overpass-bold.woff') format('woff'),
-       url('overpass-bold.ttf')  format('truetype');
+  src: url('./overpass-bold.eot');
+  src: url('./overpass-bold.eot?#iefix') format('embedded-opentype'),
+       url('./overpass-bold.woff2') format('woff2'),
+       url('./overpass-bold.woff') format('woff'),
+       url('./overpass-bold.ttf')  format('truetype');
   font-weight: 700;
   font-style: normal;
 }
