--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -1,6 +1,6 @@
 {% extends './layout.twig' %}
 
-{% block title %}{{ config.name }}{% endblock %}
+{% block title %}{{ config.title }}{% endblock %}
 
 {% block content %}
 <div class="pew_container">
