--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -22,7 +22,7 @@
         <ul class="pew_breadcrumb__link-list">
           {% for component in nodes.components %}
             <li class="pew_breadcrumb__link-item">
-              <a class="pew_link pew_breadcrumb__link {% if component.active %}pew_breadcrumb__link--active{% endif %}" href="{{ component.url }}">{{ component.name }}</a>
+              <a class="pew_link pew_breadcrumb__link {% if component.active %}pew_breadcrumb__link--active{% endif %}" href="{{ component.url }}">{{ component.title }}</a>
             </li>
           {% endfor %}
         </ul>
